# names

./: MANIFEST.in  README.md  Taskfile.yml  setup.cfg
src/names/: __init__.py  markov.py  names.py  random.py  reader.py
src/names/data/firstnames/samples/: animais.txt  computer_names.txt  conhecidos.txt  got.txt  greek_gods.txt  matrix.txt  nordic_gods.txt  starwars.txt  witcher.txt  wow.txt  xmen.txt
src/names/data/firstnames/train/: demon.txt  got.txt  harrypotter.txt  lotr.txt
src/names/data/lastnames/: adjetivos.txt  cientistas.txt  cores.txt  friends.txt  got.txt  harrypotter.txt  misc.txt  superheroes.txt
tests/: test_markov_chain.py  test_names.py  test_random_selector.py
