[metadata]
name = names
version = attr: names.__version__
author = Rafael Santos
author_email = rafael@aurearobotics.com
description = Names é uma library Python para gerar nomes.
url = https://gitlab.com/AureaRobotics/names/
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
py_modules =
package_dir =
    = src
packages = find:
include_package_data = True

# Production dependencies
install_requires =

[options.packages.find]
where=src

# Optional requirements
[options.extras_require]
dev =
    black==21.6b0
    check-manifest==0.46
    ipython==7.25.0
    jupyter==1.0.0
    pytest==6.2.4

[options.package_data]
names = data/*.txt
